main features: Routing, fetching, updating, favouriting done. Next: modal for about (or just another route), MODAL for the cards to see full picture

--- a/src/app/faves/fave/fave.component.html
+++ b/src/app/faves/fave/fave.component.html
@@ -1,1 +1,6 @@
-<p>fave works!</p>
+<div class="fox-card">
+  <img src="{{ foxUrl }}" alt="fox picture">
+  <div class="fox-card__actions">
+    <i class="fa-solid fa-trash-can" (click)="onUnfavourite()"></i>
+  </div>
+</div>
