--- a/src/app/foxes/fox/fox.component.html
+++ b/src/app/foxes/fox/fox.component.html
@@ -2,5 +2,6 @@
   <img src="{{ foxUrl }}" alt="fox picture">
   <div class="fox-card__actions">
     <i class="fa-solid fa-arrows-rotate" (click)="onRefresh()"></i>
+    <i class="fa-solid fa-heart" (click)="onAddFavourite()"></i>
   </div>
 </div>
