--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <h3 class="title">Foxy</h3>
   <ul class="list">
     <li class="list-item"><a routerLink="/">Foxes</a></li>
-    <li class="list-item"><a routerLink="/">Favourites</a></li>
+    <li class="list-item"><a routerLink="/favourites">Favourites</a></li>
     <li class="list-item"><a routerLink="/">About</a></li>
   </ul>
 </nav>
