--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,7 @@
 <nav>
-  <h3 class="title">Foxy</h3>
+  <a routerLink="/">
+    <h1 href="#" class="title">Foxy</h1>
+  </a>
   <ul class="list">
     <li class="list-item"><a routerLink="/">Foxes</a></li>
     <li class="list-item"><a routerLink="/favourites">Favourites</a></li>
