--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,6 +4,16 @@ nav {
   align-items: center;
   padding: 0 1.25rem;
   border-bottom: 1px solid rgba(0, 0, 0, 0.218);
+  a {
+    text-decoration: none;
+    color: black;
+    &::after {
+      color: black;
+    }
+  }
+  h1 {
+    margin: 0;
+  }
   li {
     display: inline;
     margin-left: 1rem;
