--- a/src/app/faves/fave/fave.component.html
+++ b/src/app/faves/fave/fave.component.html
@@ -1,6 +1,14 @@
 <div class="fox-card">
-  <img src="{{ foxUrl }}" alt="fox picture">
+  <img src="{{ foxUrl }}" alt="fox picture" />
+
+  <div class="overlay">
+    <a target="_blank" href="{{ foxUrl }}"><p>Click to see full image</p></a>
+  </div>
   <div class="fox-card__actions">
-    <i class="fa-solid fa-trash-can" (click)="onUnfavourite()"></i>
+    <i
+      style="color: rgb(95, 95, 95)"
+      class="fa-solid fa-trash-can"
+      (click)="onUnfavourite()"
+    ></i>
   </div>
 </div>
