--- a/src/app/foxes/fox/fox.component.html
+++ b/src/app/foxes/fox/fox.component.html
@@ -1,7 +1,10 @@
 <div class="fox-card">
   <img src="{{ foxUrl }}" alt="fox picture">
+  <div class="overlay">
+    <a target="_blank" href="{{ foxUrl }}"><p>Click to see full image</p></a>
+  </div>
   <div class="fox-card__actions">
-    <i class="fa-solid fa-arrows-rotate" (click)="onRefresh()"></i>
+    <i style="color: rgb(7, 108, 7)" class="fa-solid fa-arrows-rotate" (click)="onRefresh()"></i>
     <i class="fa-solid fa-heart" (click)="onAddFavourite()"></i>
   </div>
 </div>
