--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,6 @@
   <ul class="list">
     <li class="list-item"><a routerLink="/">Foxes</a></li>
     <li class="list-item"><a routerLink="/favourites">Favourites</a></li>
-    <li class="list-item"><a routerLink="/">About</a></li>
+    <li class="list-item"><a routerLink="/about">About</a></li>
   </ul>
 </nav>
