--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,22 +3,21 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 1.25rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.218);
   a {
     text-decoration: none;
-    color: black;
+    color: white;
     &::after {
       color: black;
     }
   }
   h1 {
     margin: 0;
+    text-decoration: none;
   }
   li {
     display: inline;
     margin-left: 1rem;
     a {
-      color: black;
       text-decoration: none;
       &:hover {
         text-decoration: underline;
