--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,8 @@
     <h1 href="#" class="title">Foxy</h1>
   </a>
   <ul class="list">
-    <li class="list-item"><a routerLink="/">Foxes</a></li>
-    <li class="list-item"><a routerLink="/favourites">Favourites</a></li>
-    <li class="list-item"><a routerLink="/about">About</a></li>
+    <li class="list-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Foxes</a></li>
+    <li class="list-item"><a routerLink="/favourites" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Favourites</a></li>
+    <li class="list-item"><a routerLink="/about" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About</a></li>
   </ul>
 </nav>
