working on added to favourite notifier. z-index increased and timeout is working

--- a/src/app/notification/notification.component.scss
+++ b/src/app/notification/notification.component.scss
@@ -11,10 +11,11 @@
   position: fixed;
   top: 60px;
   right: 25px;
+  z-index: 10;
   a {
     cursor: pointer;
   }
-  animation: fadeOut 4s;
+  animation: fadeOut 1s 1s;
 }
 
 .flash-success {
