--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <nav>
-  <a routerLink="/">
+  <a routerLink="/" class="title">
+    <img src="../../assets/fox_scarf.svg">
     <h1 href="#" class="title">Foxy</h1>
   </a>
   <ul class="list">
